# python-font-fjallaone

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  gen_ref_pages.py  index.html  mkdocs.yaml  pyproject.toml  ruff.toml
.github/workflows/: lint-and-test.yaml  release.yaml  semantic-release.yaml  test.yaml
font_fjallaone/: __init__.py
search/: search_index.json
tests/: test_fjallaone.py
