[tool.poetry]
name = "font-fjallaone"
version = "0.0.0" # 0.0.0 placeholder is replaced on release
description = "Fjalla One from from Sorkin Type as distributed by Google Fonts"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
readme = "README.md"
packages = [
    { include = "font_fjallaone"},
]
include = ["font_fjallaone/files"]

[tool.poetry.plugins."fonts_ttf"]
fjallaone = "font_fjallaone:font_files"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
wheel = "^0.40.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
flake8-string-format = "^0.3.0"
flake8-tuple = "^0.4.1"
freezegun = "^1.2.2"
black = "^23.7.0"
isort = "^5.12.0"
pytest-mypy = "^0.10.3"
pytest-pylint = "^0.19.0"
pytest-random-order = "^1.1.0"

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint.format]
max-line-lenth = 120

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q --random-order --doctest-glob='*.md' --doctest-modules --cov=font_fjallaone --cov-fail-under=100 --pylint --mypy"
filterwarnings = [
    "ignore::pytest.PytestRemovedIn8Warning:pytest_pylint",
    "ignore::DeprecationWarning:pylint"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
