[tool.poetry]
name = "font-fjallaone"
version = "0.0.0" # 0.0.0 placeholder is replaced on release
description = "Fjalla One from from Sorkin Type as distributed by Google Fonts"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
readme = "README.md"
packages = [
    { include = "font_fjallaone"},
]
include = ["font_fjallaone/files"]

[tool.poetry.plugins."fonts_ttf"]
fjallaone = "font_fjallaone:font_files"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
flake8-string-format = "^0.3.0"
flake8-tuple = "^0.4.1"
freezegun = "^1.4.0"
pytest = "^8.0.1"
pytest-cov = ">=4.1,<7.0"
pytest-mypy = "^0.10.3"
pytest-random-order = "^1.1.1"
pytest-ruff = ">=0.3.1,<0.5.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.10"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocs-autorefs = ">=0.5,<1.5"
mkdocstrings = {extras = ["python"], version = ">=0.24,<0.30"}
wheel = ">=0.42,<0.46"
ruff = ">=0.4.2,<0.12.0"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q --random-order --doctest-glob='*.md' --doctest-modules --cov=font_fjallaone --cov-fail-under=100 --ruff --mypy --ignore=docs/"
filterwarnings = [
    "ignore::DeprecationWarning:pylint"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
